# SistemaGestionAcademica

./: Alumno.cpp  Alumno.h  CMakeLists.txt  ControlError.cpp  ControlError.h  Curso.cpp  Curso.h  Lista.cpp  Lista.h  NodoAlumno.cpp  NodoAlumno.h  NodoCurso.cpp  NodoCurso.h  NodoMatricula.cpp  NodoMatricula.h  Nodonota.cpp  Nodonota.h  README.md  ReportesTodo.cpp  ReportesTodo.h  main.cpp
